<resources>
    <string name="app_name">简约记账</string>
    <string name="editone">记一笔...</string>
    <string name="month_out">本月支出</string>
    <string name="out">支出</string>
    <string name="month_in">本月收入</string>
    <string name="in">收入</string>
    <string name="budget">预算剩余</string>
    <string name="set_budget">设置预算</string>
    <string name="see_excel">查看图表分析</string>
    <string name="add_remark">添加备注</string>
    <string name="remark">备注</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="history_record">账单记录</string>
    <string name="account_info">账单详情</string>
    <string name="todo_list">我的待办</string>
    <string name="my_wish">心愿清单</string>
    <string name="please_input_time">请输入时间(24小时制)</string>
    <string name="please_search_info">请输入搜索信息</string>
    <string name="date_empty">数据为空，无此类记录~~</string>
    <string name="chart_info">账单详情</string>

    <string name="about_appinfo">应用信息</string>
    <string name="about_version">版本</string>
    <string name="about_1">1.0</string>
    <string name="about_app">关于应用</string>
    <string name="about_balabala">学会这个项目,就能够理解Activity，Fragment，数据库等相关内容，好好学习吧！</string>
    <string name="about_developer">开发者</string>
    <string name="about_me">关于我</string>
    <string name="about_loc">坐标沈阳,Android程序员。</string>
    <string name="about_email">发送邮箱</string>
    <string name="about_email2">我的邮箱是:liusihui188@126.com,有问题可以找我！</string>
    <string name="about_code">源代码</string>
    <string name="about_codeinfo">我的代码托管在码云服务器上，地址链接为：\nhttps://gitee.com/happyanimee/simple-bookkeeping</string>
    <string name="about_B">B站地址</string>
    <string name="about_B2">我的个人Bilibili主页地址为：\nhttps://space.bilibili.com/274595492</string>

    <string name="history_info">本月账单记录</string>
    <string name="clear_all">清空所有记录</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="not_data">暂无数据</string>
    <string name="title_activity_todo_list">TodoListActivity</string>


    <string name="welcomeTitle">欢迎使用xxx个人记账APP!</string>
    <string name="account">用户</string>
    <string name="hint1">请输入手机号</string>
    <string name="hint2">请输入密码</string>
    <string name="forgetPassword">忘记密码？</string>
    <string name="login">立即登录</string>
    <string name="register">立即注册</string>
    <string name="rememberPassword">记住密码</string>
    <string name="title_register">欢迎注册</string>
    <string name="send">发送验证码</string>
    <string name="hint3">验证码</string>
    <string name="hint4">请再次输入密码</string>
    <string name="tip">已有账号，</string>
    <string name="tip2">注册即代表您已阅读并同意</string>
    <string name="protocol">使用协议</string>
</resources>
