<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        >
        <ImageView
            android:id="@+id/logo"
            android:paddingLeft="0dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/welcomeTitle"
            android:textColor="#FF000000"
            android:textSize="20sp"
            android:textStyle="normal" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

        <EditText
            android:height="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:hint="@string/hint1"
            android:inputType="phone"
            android:textColorHint="#95a1aa"
            android:drawableLeft="@drawable/baseline_person_24"
            android:drawablePadding="15dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:background="@drawable/edit_text_shape"
            android:textSize="30dp"
            />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">
            <EditText
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:hint="@string/hint2"
                android:inputType="textPassword"
                android:textColorHint="#95a1aa"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="15dp"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:background="@drawable/edit_text_shape"
                android:textSize="30dp"/>
            <ImageButton
                android:id="@+id/visible"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="350dp"
                android:layout_marginTop="45dp"
                android:background="@color/white"
                android:src="@drawable/baseline_visibility_off_24"
                android:visibility="visible"/>
            <ImageButton
                android:id="@+id/visible2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="350dp"
                android:layout_marginTop="45dp"
                android:background="@color/white"
                android:src="@drawable/baseline_remove_red_eye_24"
                android:visibility="gone"/>

        </FrameLayout>


    </LinearLayout>



    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/rememberPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rememberPassword"
            android:layout_marginLeft="40dp"/>

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/forgetPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/forgetPassword"
            android:layout_marginRight="10dp"
            android:textColor="@color/blue"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <Button
            android:id="@+id/login"
            android:layout_width="500dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/login"
            android:background="@drawable/button_shape"
            android:textSize="30dp"/>

        <Button
            android:id="@+id/register"
            android:layout_width="500dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/register"
            android:background="@drawable/button_shape"
            android:textSize="30dp"/>
    </LinearLayout>






</LinearLayout>